src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__UsageMeasurementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This reference to Charge Measurement for usage pricing.</description>
        <label>Usage Unit of Measure</label>
        <referenceTo>vlocity_cmt__ChargeMeasurement__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsagePriceTotal__c</fullName>
        <description>Usage Price Total</description>
        <label>Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageQuantity__c</fullName>
        <description>Usage Quantity</description>
        <label>Usage Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageUnitCost__c</fullName>
        <description>Usage Cost</description>
        <label>Usage Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageUnitPrice__c</fullName>
        <description>Usage Price</description>
        <label>Usage Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>